--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Michael Thomas <Michaelt293@gmail.com>"]
 
 [dependencies]
+either = "1.5"
 maplit = "1.0.1"
 
 [[bin]]
